--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,24 +1,22 @@
-spring.application.name=demo-project
-# ???????
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://mysql:3306/demo_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&autoReconnect=true&maxReconnects=10&initialTimeout=10
+
+spring.datasource.url=jdbc:mysql://mysql:3306/demo_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=tao#1996
+spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA ??
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Redis ??
+
 spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.database=0
 spring.data.redis.timeout=60000
 
-# ?????????
+
 spring.data.redis.lettuce.pool.max-active=8
 spring.data.redis.lettuce.pool.max-idle=8
 spring.data.redis.lettuce.pool.min-idle=0
