--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Redis ??
+# Redis config
 spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.database=0
 spring.data.redis.timeout=60000
 
-# ?????????
+# connection pool config selectable
 spring.data.redis.lettuce.pool.max-active=8
 spring.data.redis.lettuce.pool.max-idle=8
 spring.data.redis.lettuce.pool.min-idle=0
